# SharedStaticStarter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
include/somelib/: random.h
packaging/: CMakeLists.txt  SomeLibConfig.cmake
src/: random.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  main.cpp
